--- a/web-app/tds/web-app/app-js/modules/fieldSettings/components/grid/field-settings-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/fieldSettings/components/grid/field-settings-grid.component.html
@@ -63,7 +63,7 @@
     </kendo-grid-column>
     <kendo-grid-column field="label" title="Label" [width]="150">
         <ng-template kendoGridCellTemplate *ngIf="isEditing" let-dataItem>
-            <input type="text" [ngClass]="{'has-error': hasError(dataItem.label), 'to-be-deleted': toBeDeleted(dataItem)}" *ngIf="dataItem.udf" class="form-control" [(ngModel)]="dataItem.label"
+            <input (blur)="onBlur(dataItem)" type="text" [ngClass]="{'has-error': hasError(dataItem), 'to-be-deleted': toBeDeleted(dataItem)}" *ngIf="dataItem.udf" class="form-control" [(ngModel)]="dataItem.label"
                 id="{{dataItem.field}}" name="{{dataItem.field}}" [disabled]="toBeDeleted(dataItem)">
             <span *ngIf="!dataItem.udf">{{dataItem.label}}</span>
         </ng-template>
