--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/asset-dependency/asset-dependency.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/asset-dependency/asset-dependency.component.html
@@ -67,9 +67,14 @@
                     </div>
 
 	                <asset-dependency-show
+			                *ngIf="!isEditing; else editDependenciesTemplate"
                             [dependencyA]="dependencyA"
                             [dependencyB]="dependencyB">
                     </asset-dependency-show>
+
+                    <ng-template #editDependenciesTemplate>
+                        <asset-dependency-edit [dependencyA]="dependencyA" [dependencyB]="dependencyB"></asset-dependency-edit>
+                    </ng-template>
 
                 </div>
 
@@ -92,8 +97,38 @@
 
             </div>
             <div class="modal-footer form-group-center">
-                <button (click)="cancelCloseDialog()" type="button" class="btn btn-default text-center">
-                    <span class="glyphicon glyphicon-ban-circle"></span> {{'GLOBAL.CLOSE' | translate }}</button>
+                <div *ngIf="!isEditing; else buttonsEditModeTemplate">
+                    <tds-button
+                            [action]="ButtonActions.AssetEdit"
+                            class="btn-primary pull-left"
+                            tooltip="Edit dependencies"
+                            (click)="setEditMode(true)">
+                    </tds-button>
+
+                    <tds-button
+                            [action]="ButtonActions.AssetClose"
+                            tooltip="Close"
+                            class="pull-right"
+                            (click)="cancelCloseDialog()">
+                    </tds-button>
+                </div>
+
+	            <ng-template #buttonsEditModeTemplate>
+                    <tds-button
+                            [action]="ButtonActions.AssetUpdate"
+                            class="btn-primary pull-left"
+                            tooltip="Save changes"
+                            (click)="saveChanges()">
+                    </tds-button>
+
+                    <tds-button
+                            [action]="ButtonActions.AssetCancel"
+                            tooltip="Cancel editing"
+                            class="pull-right"
+                            (click)="setEditMode(false)">
+                    </tds-button>
+
+                </ng-template>
             </div>
         </div>
     </div>
