TM-13754  Add edit controls

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/asset-dependency/asset-dependency.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/asset-dependency/asset-dependency.component.html
@@ -73,7 +73,14 @@
                     </asset-dependency-show>
 
                     <ng-template #editDependenciesTemplate>
-                        <asset-dependency-edit [dependencyA]="dependencyA" [dependencyB]="dependencyB"></asset-dependency-edit>
+                        <asset-dependency-edit
+                                [dependencyA]="dependencyA"
+                                [dependencyB]="dependencyB"
+                                [frequencyList]="frequencyList"
+                                [statusList]="statusList"
+                                [typeList]="typeList"
+                                [directionList]="directionList"
+                        ></asset-dependency-edit>
                     </ng-template>
 
                 </div>
