TM-13754 Nofity on edit changes to the host component

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/asset-dependency/asset-dependency.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/asset-dependency/asset-dependency.component.html
@@ -80,6 +80,7 @@
                                 [statusList]="statusList"
                                 [typeList]="typeList"
                                 [directionList]="directionList"
+                                (change)="onChangeDependencies($event)"
                         ></asset-dependency-edit>
                     </ng-template>
 
@@ -123,6 +124,7 @@
 	            <ng-template #buttonsEditModeTemplate>
                     <tds-button
                             [action]="ButtonActions.AssetUpdate"
+                            [disabled]="!changedDependencies"
                             class="btn-primary pull-left"
                             tooltip="Save changes"
                             (click)="saveChanges()">
@@ -132,7 +134,7 @@
                             [action]="ButtonActions.AssetCancel"
                             tooltip="Cancel editing"
                             class="pull-right"
-                            (click)="setEditMode(false)">
+                            (click)="cancelEdit(false)">
                     </tds-button>
 
                 </ng-template>
