--- a/web-app/tds/web-app/css/page/module/user/user-manage-staff.component.sass
+++ b/web-app/tds/web-app/css/page/module/user/user-manage-staff.component.sass
@@ -5,14 +5,11 @@
     font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif
   table
     width: 100%
-  .menuTab
-    display: inline-block
-    color: white
-    background-color: black
-    cursor: pointer
   .buttons
     padding: 15px
     text-align: center
+  .btn
+    margin-right: 3px
   .name
     font-weight: bold
     padding: 4px 5px
