TM-13754 Determine the type of dependency change

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/asset-dependency/asset-dependency.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/asset-dependency/asset-dependency.component.html
@@ -124,7 +124,7 @@
 	            <ng-template #buttonsEditModeTemplate>
                     <tds-button
                             [action]="ButtonActions.AssetUpdate"
-                            [disabled]="!changedDependencies"
+                            [disabled]="!editedDependencies.dependencies"
                             class="btn-primary pull-left"
                             tooltip="Save changes"
                             (click)="saveChanges()">
