--- a/web-app/tds/web-app/css/page/module/assetExplorer/asset-dependency-component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/asset-dependency-component.sass
@@ -22,12 +22,19 @@
                 overflow: hidden
                 font-weight: normal
     .dependency-edit
+        textarea,
+        input
+            padding-left: 6px
+        .k-dropdown
+            span
+                background-color: white
         margin-bottom: 6px
         .k-widget,
         textarea,
         input
             visibility: hidden
             width: 80%
+            border-color: rgba(0, 0, 0, 0.08)
 
     textarea
         resize: none
