TM-13827 Fix padding issue

--- a/web-app/css/tds.css
+++ b/web-app/css/tds.css
@@ -331,6 +331,7 @@
 	margin-left: 5px;
 	background-image: url(../images/news_bg.jpg);
 	background-size: contain;
+	padding: 15px;
 }
 .dashboardContainer {
 	display: flex;
