--- a/web-app/tds/web-app/app-js/modules/licenseAdmin/components/manual-request/manual-request.component.html
+++ b/web-app/tds/web-app/app-js/modules/licenseAdmin/components/manual-request/manual-request.component.html
@@ -7,7 +7,7 @@
 			 [style.height.px]="394">
 			<div class="modal-header">
 				<button type="button" (click)="cancelCloseDialog()" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-				<h4 class="modal-title">Email License License</h4>
+				<h4 class="modal-title">Email License</h4>
 			</div>
 			<div class="modal-body">
 				<form name="manualLicenseRequestForm" role="form" data-toggle="validator" #manualLicenseRequestForm='ngForm' class="form-horizontal left-alignment">
