TM-13505 Avoid move the focus whenever the control has errors

--- a/web-app/tds/web-app/app-js/modules/fieldSettings/components/grid/field-settings-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/fieldSettings/components/grid/field-settings-grid.component.html
@@ -63,7 +63,7 @@
     </kendo-grid-column>
     <kendo-grid-column field="label" title="Label" [width]="150">
         <ng-template kendoGridCellTemplate *ngIf="isEditing" let-dataItem>
-            <input (blur)="onBlur(dataItem)" type="text" [ngClass]="{'has-error': hasError(dataItem), 'to-be-deleted': toBeDeleted(dataItem)}" *ngIf="dataItem.udf" class="form-control" [(ngModel)]="dataItem.label"
+            <input (blur)="onBlur(dataItem, $event)" (keyup)="onKeyPressed($event)" type="text" [ngClass]="{'has-error': hasError(dataItem), 'to-be-deleted': toBeDeleted(dataItem)}" *ngIf="dataItem.udf" class="form-control" [(ngModel)]="dataItem.label"
                 id="{{dataItem.field}}" name="{{dataItem.field}}" [disabled]="toBeDeleted(dataItem)">
             <div *ngIf="dataItem.errorMessage" class="error-message">
                 {{dataItem.errorMessage}}
