--- a/web-app/tds/web-app/app-js/modules/fieldSettings/components/grid/field-settings-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/fieldSettings/components/grid/field-settings-grid.component.html
@@ -20,8 +20,8 @@
     (dataStateChange)="dataStateChange($event)" class="field-settings-grid">
     <ng-template kendoGridToolbarTemplate [position]="'top'" *ngIf="isEditing; else defaultToolbar">
         <div class="col-xs-4 col-md-3 col-lg-2">
-            <button type="button" class="btn" [ngClass]="{'btn-default':!gridState.dirty, 'btn-success':gridState.valid && gridState.dirty, 'btn-danger':!gridState.valid && gridState.dirty}"
-                id="btnSaveAll" [disabled]="!gridState.editable || !gridState.dirty || !gridState.valid" (click)="onSaveAll()"><i class="fa fa-fw fa-floppy-o"></i> {{'GLOBAL.SAVE_ALL' | translate}}</button>
+            <button type="button" class="btn" [ngClass]="{'btn-default':!gridState.dirty && !atLeastOneInvalidField(), 'btn-success':gridState.valid && gridState.dirty, 'btn-danger':(!gridState.valid && gridState.dirty) || atLeastOneInvalidField()}"
+                id="btnSaveAll" [disabled]="!gridState.editable || !gridState.dirty || !gridState.valid || atLeastOneInvalidField()" (click)="onSaveAll()"><i class="fa fa-fw fa-floppy-o"></i> {{'GLOBAL.SAVE_ALL' | translate}}</button>
             <button type="button" class="btn btn-default" id="btnCancel" (click)="onCancel()"><i class="fa fa-fw fa-times"></i> {{'GLOBAL.CANCEL' | translate}}</button>
         </div>
         <div *ngIf="isFilterDisabled; else filterControl"></div>
