--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -81,6 +81,12 @@
     a
       font-weight: bold
       color: #333!important
+
+  table.tds-asset-view-content-table
+    min-width: 1000px
+    table.planning-application-table
+      min-width: 490px !important
+
   table
     border-collapse: separate
     border-spacing: 2px
