TM-13954 - Fix Safari issue.

--- a/web-app/tds/web-app/css/shared/components/datetime-control.component.sass
+++ b/web-app/tds/web-app/css/shared/components/datetime-control.component.sass
@@ -12,10 +12,10 @@ tds-datetime-control
     .k-picker-wrap
       border: 0 !important
   kendo-timepicker
-    width: auto !important
+    width: 0px !important
     .k-picker-wrap
       border: 0 !important
-      width: auto !important
+      width: 0px !important
       .k-select
         height: 30px
       .k-dateinput
