TM-13952 Fix The Asset listed in the Task Detail modal should be a link

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -83,7 +83,7 @@
                                                     <td class="label N" nowrap="nowrap">
                                                         <label><span>Asset</span></label>
                                                     </td>
-                                                    <td class="valueNW"><span>{{model.asset && model.asset.text}}</span></td>
+                                                    <td class="valueNW"><a (click)="onOpenLinkAsset()">{{model.asset && model.asset.text}}</a></td>
                                                 </tr>
 
 
