--- a/src/main/webapp/tds/web-app/app-js/modules/assetManager/components/asset-view-show/asset-view-show.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/assetManager/components/asset-view-show/asset-view-show.component.html
@@ -38,9 +38,9 @@
 
             <tds-button-export (click)="onExport()" [id]="'btnExport'"></tds-button-export>
 
-            <asset-explorer-view-selector
-                    #select="assetExplorerViewSelector">
-            </asset-explorer-view-selector>
+            <tds-asset-view-selector
+                    #select="tdsAssetViewSelector">
+            </tds-asset-view-selector>
             <tds-button-custom *ngIf="isEditAvailable()"
                         isIconButton="true"
                         icon="cog"
